update thing that is never actually used

--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ pygmentsUseClasses=true
   author = "Jacob Kupersmith"
   info = 'Full Stack Developer'
   description = "Jacob Kupersmith's personal website"
-  keywords = "blog,fullstack,developer,personal"
+  keywords = "jacob kupersmith,full stack developer,blog,personal"
   avatarurl = "/img/favicon.svg"
   favicon_32 = "/img/favicon-32.png"
   favicon_16 = "/img/favicon-16.png"
